<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/iv_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/hint_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_content"
                    android:gravity="start"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_post"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp">

            <ProgressBar
                android:id="@+id/pb_publish"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminateTint="@android:color/white"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_post"
                android:textColor="@android:color/white"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>
